# projeto-final-grupo-2-EDA2-2026-01-Turma-03

./: .gitignore  API.md  FASE2.md  README.md  build_graph.py  examples.py  fase2_export.py  grafo_interativo_business.html  main.py  pyproject.toml  run_tests.py  see.py  tests.py  tests_graph.py  verify_project.py  visual.py
Part3-community-creation/: fila_prioridades.py  input.py  kruskal.py  see.py  weight_inv.py
data/processed/: comunidades_tabular.csv
docs/: API.md
src/: __init__.py
src/Part3-community-creation/: communities.py  input.py  verify.py
src/communities/: __init__.py  pipeline.py
src/graph/: __init__.py  exporter.py  fase2_export.py  graph_builder.py
src/preprocessing/: __init__.py  stopwords.py  text_processor.py
src/utils/: __init__.py  file_handler.py  tabular_export.py
tests/: conftest.py  test_phase1.py  test_phase2.py  test_phase3.py
